--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -9,4 +9,4 @@ on:
 
 jobs:
   release-drafter:
-    uses: .github/workflows/reusable_release-drafter.yml
+    uses: ./.github/workflows/reusable_release-drafter.yml
