--- a/.github/workflows/reusable_build-and-save-dist.yml
+++ b/.github/workflows/reusable_build-and-save-dist.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: Test output
         run: |
-          echo "${{ github.event.pull_request.labels }}"
+          echo "${{ toJSON(github.event.pull_request.labels) }}"
       # - name: Checkout 🛎️
       #   uses: actions/checkout@v2
       #   with:
