--- a/.github/workflows/reusable_build-and-save-dist.yml
+++ b/.github/workflows/reusable_build-and-save-dist.yml
@@ -16,45 +16,42 @@ on:
 
 jobs:
   build_and_save:
-    # if: contains(github.event.pull_request.labels, 'publish')
+    if: contains(github.event.pull_request.labels.*.name, 'publish')
     runs-on: ubuntu-latest
     steps:
-      - name: Test output
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
+
+      - name: Setup node 12
+        uses: actions/setup-node@v3
+        with:
+          node-version: 12.x
+          cache: yarn
+
+      - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
+
+      - name: Install
+        run: yarn install --frozen-lockfile
+
+      - name: Build
+        run: yarn bundle
+
+      - name: Commit files
         run: |
-          echo "${{ contains(github.event.pull_request.labels.*.name, 'feature') }}"
-      # - name: Checkout 🛎️
-      #   uses: actions/checkout@v2
-      #   with:
-      #     persist-credentials: false
-      #     fetch-depth: 0
-      #     ref: ${{ github.event.pull_request.head.ref }}
+          git status
+          git config --local user.email "${{ inputs.git_user_email }}"
+          git config --local user.name "${{ inputs.git_user_name }}"
+          [[ ! -z `git status dist -s` ]] && git add dist/* && git commit -m "Chore: Built dist" || exit 0
 
-      # - name: Setup node 12
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 12.x
-      #     cache: yarn
-
-      # - uses: webfactory/ssh-agent@v0.5.4
-      #   with:
-      #     ssh-private-key: ${{ secrets.SSH_KEY }}
-
-      # - name: Install
-      #   run: yarn install --frozen-lockfile
-
-      # - name: Build
-      #   run: yarn bundle
-
-      # - name: Commit files
-      #   run: |
-      #     git status
-      #     git config --local user.email "${{ inputs.git_user_email }}"
-      #     git config --local user.name "${{ inputs.git_user_name }}"
-      #     [[ ! -z `git status dist -s` ]] && git add dist/* && git commit -m "Chore: Built dist" || exit 0
-
-      # - name: Push changes
-      #   if: success()
-      #   uses: ad-m/github-push-action@master
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     branch: ${{ github.event.pull_request.head.ref }}
+      - name: Push changes
+        if: success()
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.event.pull_request.head.ref }}
